
# this directory
thisdir = $(srcdir)

# include files
dist_configfiles_DATA = example.xml mapping.xml test.png icon.bmp
configfilesdir = $(docdir)

# include pd files
dist_facade_patches_DATA = \
		$(thisdir)/facade-patches/example.pd \
		$(thisdir)/facade-patches/facade-color.pd \
		$(thisdir)/facade-patches/facade-makemsg.pd \
		$(thisdir)/facade-patches/facade-rect.pd \
		$(thisdir)/facade-patches/facade-sender.pd \
		$(thisdir)/facade-patches/facade-bitmap.pd \
		$(thisdir)/facade-patches/facade-line.pd \
		$(thisdir)/facade-patches/facade-pixel.pd \
		$(thisdir)/facade-patches/facade-scene.pd \
		$(thisdir)/facade-patches/facade-sprite.pd 
facade_patchesdir = $(docdir)/pd/

